<resources>
    <string name="app_name">FlatOrganiser</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="logout_button">Logout</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_account">Already have an account?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete Account</string>
    <string name="edit_account">Edit Account</string>

    <string name="frequency_prompt">Choose bin frequency</string>

    <string-array name="frequency_array">
        <item>Select:</item>
        <item>1 Week</item>
        <item>2 Weeks</item>

    </string-array>

    <string-array name="priority_array">
        <item>Enter priority:</item>
        <item>Optional</item>
        <item>Low priority</item>
        <item>High priority</item>
        <item>Urgent</item>

    </string-array>

</resources>


